# DrishtiAI

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSES.md  Makefile  README.md  SECURITY.md  package.json  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: backup-restore.yml  ci.yml  license-check.yml  security.yml
apps/admin/: Dockerfile  Makefile  entrypoint.sh  pyproject.toml
apps/admin/drishtiai_admin/: settings.py  urls.py  wsgi.py
apps/admin/drishtiai_admin/apps/auth_ext/: apps.py
apps/admin/drishtiai_admin/apps/cameras_app/: admin.py  apps.py  models.py
apps/admin/drishtiai_admin/apps/sites_app/: admin.py  apps.py  models.py
apps/api/: Dockerfile  Makefile  entrypoint.sh  pyproject.toml
apps/api/scripts/: generate_jwt_keys.py  seed_dev_data.py  seed_superadmin.py
apps/api/src/drishtiai_api/: audit.py  config.py  deps.py  gate_creds.py  http_safe.py  log_filter.py  main.py  metrics.py  partition_manager.py  sanitize.py  schemas.py  storage.py
apps/api/src/drishtiai_api/auth/: lockout.py  password.py  tokens.py  totp.py
apps/api/src/drishtiai_api/routers/: alerts.py  analytics.py  audit.py  auth.py  cameras.py  events.py  gates.py  health.py  license.py  mfa.py  notifications.py  parking.py  plates.py  reports.py  review_queue.py  sites.py  stream.py  system.py  tariffs.py  users.py  vehicles.py  visitor_passes.py  watchlists.py  webhooks.py  ws.py
apps/api/tests/: conftest.py  test_auth.py  test_cameras.py  test_health.py  test_security.py  test_validation.py
apps/licensing/: cli.py
apps/mobile/: Makefile  app.json  metro.config.js  package.json
apps/mobile/app/: _layout.tsx
apps/mobile/app/(auth)/: login.tsx
apps/mobile/app/(tabs)/: _layout.tsx  alerts.tsx  events.tsx  index.tsx  parking.tsx  passes.tsx  profile.tsx
apps/mobile/src/components/: PlateTag.tsx  StatCard.tsx
apps/mobile/src/lib/: api.ts  notifications.ts  store.ts
apps/pipeline/: Dockerfile  Makefile  pyproject.toml
apps/pipeline/src/drishtiai_pipeline/: alert_engine.py  capture.py  color_detect.py  config.py  dedup.py  gate.py  gst_capture.py  health.py  main.py  ocr.py  parking_session.py  review_queue.py  voter.py  webhook_fire.py  writer.py
apps/pipeline/tests/: test_dedup.py  test_ocr_filter.py
apps/web/: Dockerfile  Makefile  next.config.ts  package.json  tailwind.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/(auth)/login/: page.tsx
apps/web/src/app/(dashboard)/: layout.tsx  page.tsx
apps/web/src/app/(dashboard)/alerts/: page.tsx
apps/web/src/app/(dashboard)/analytics/: page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/components/ui/: button.tsx  camera-tile.tsx  color-swatch.tsx  empty-state.tsx  events-table.tsx  input.tsx  kind-chip.tsx  page-header.tsx  plate-strip.tsx
apps/web/src/lib/: api.ts  utils.ts
apps/web/src/store/: auth.ts
apps/worker/: Dockerfile  Makefile  pyproject.toml
apps/worker/src/drishtiai_worker/: celery_app.py
apps/worker/src/drishtiai_worker/tasks/: export.py  reports.py  retention.py  scheduled.py
deploy/compose/: docker-compose.yml
deploy/compose/grafana/provisioning/dashboards/: dashboards.yml  drishtiai_ops.json
deploy/compose/init/: postgres-init.sql
deploy/compose/mediamtx/: mediamtx.yml
deploy/compose/nginx/: nginx.conf
deploy/compose/nginx/conf.d/: drishtiai.conf
deploy/compose/prometheus/: prometheus.yml
deploy/compose/test-media/: README.md
deploy/install/: install.sh  test_backup_restore.sh
docs/: architecture.md  industry-grade-gap.md  installer-guide.md  qa-notes.md  reconciliation.md
ml/benchmarks/: README.md  compare_plate_recognizer.py  download_test_data.sh  eval_nepali_ocr.py  eval_phase1.py  eval_phase11.py  nepali-ocr.md  phase1_gt.json
ml/benchmarks/synthetic/: generate_plate_crops.py  generate_test_video.py
ml/plate-detect/: README.md
ml/plate-ocr/: README.md  collect_corrections.py  fine_tune.py  prepare_dataset.py
ml/plate-ocr/chars/: nepali_devanagari.txt
ml/plate-ocr/configs/: nepali_devanagari.yml  nepali_embossed.yml
ml/vehicle-attrs/: README.md
tests/: smoke_test.sh
(+15 files in other folders)
