[project]
name = "drishtiai-admin"
version = "0.0.0"
description = "DrishtiAI Django admin service"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.0",
    "psycopg[binary]>=3.2.1",
    "django-environ>=0.11.2",
    "whitenoise>=6.7.0",
    "gunicorn>=22.0.0",
    "argon2-cffi>=23.1.0",
    "drishtiai-shared",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-django>=4.8.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "django-stubs>=5.0.4",
]

[tool.uv.sources]
drishtiai-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["drishtiai_admin"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "drishtiai_admin.settings"
