[project]
name = "drishtiai-api"
version = "0.0.0"
description = "DrishtiAI FastAPI service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-jose[cryptography]>=3.3.0",
    "argon2-cffi>=23.1.0",
    "slowapi>=0.1.9",
    "nh3>=0.2.14",
    "sqlalchemy>=2.0.31",
    "alembic>=1.13.2",
    "psycopg[binary]>=3.2.1",
    "redis>=5.0.8",
    "celery>=5.4.0",
    "minio>=7.2.8",
    "reportlab>=4.2.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "prometheus-client>=0.20.0",
    "pyotp>=2.9.0",
    "drishtiai-shared",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.8",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "bandit>=1.7.9",
    "pip-audit>=2.7.0",
]

[tool.uv.sources]
drishtiai-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/drishtiai_api"]
