[project]
name = "drishtiai-pipeline"
version = "0.0.0"
description = "DrishtiAI video and ML pipeline (GStreamer + DeepStream)"
requires-python = ">=3.12"
dependencies = [
    "redis>=5.0.8",
    "sqlalchemy>=2.0.31",
    "psycopg[binary]>=3.2.1",
    "minio>=7.2.8",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "drishtiai-shared",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.uv.sources]
drishtiai-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/drishtiai_pipeline"]
