[project]
name = "drishtiai-worker"
version = "0.0.0"
description = "DrishtiAI Celery worker"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.4.0",
    "redis>=5.0.8",
    "sqlalchemy>=2.0.31",
    "psycopg[binary]>=3.2.1",
    "minio>=7.2.8",
    "reportlab>=4.2.0",
    "drishtiai-shared",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.8",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.uv.sources]
drishtiai-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/drishtiai_worker"]
